update bulletproofs submodule to include borsh serialization of generators

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "bulletproofs"]
 	path = bulletproofs
 	url = git@github.com:brave-experiments/bulletproofs.git
-	branch = boomerang
+	branch = borsh
